--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - 9870:9870
       - 9000:9000
+      - 8020:8020 
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
       - ./myhadoop:/myhadoop
@@ -67,6 +68,7 @@ services:
     environment:
       - INIT_DAEMON_STEP=setup_spark
     command: /bin/bash -c "/spark/bin/spark-class org.apache.spark.deploy.master.Master --host spark-master && /spark/bin/spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0 /app/spark_kafka_consumer.py"
+
   spark-worker-1:
     image: bde2020/spark-worker:3.3.0-hadoop3.3
     container_name: spark-worker-1
@@ -76,6 +78,34 @@ services:
       - "8081:8081"
     environment:
       - "SPARK_MASTER=spark://spark-master:7077"
+
+  # spark-submit:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: spark-submit
+  #   depends_on:
+  #     - spark-master
+  #     - spark-worker
+  #   volumes:
+  #     - ./app:/app 
+  #   environment:
+  #     - SPARK_MASTER=spark://spark-master:7077
+
+  spark-submit:
+    image: bde2020/spark-base:3.3.0-hadoop3.3  # Utilisez une image Spark de base pour spark-submit
+    container_name: spark-submit
+    depends_on:
+      - spark-master
+      - spark-worker-1
+    volumes:
+      - ./app:/app  # Monte le répertoire contenant votre script
+    environment:
+      - SPARK_MASTER=spark://spark-master:7077
+    command: >
+      /spark/bin/spark-submit --master spark://spark-master:7077
+      --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0
+      /app/spark_kafka_consumer.py
 
   kafka:
     image: wurstmeister/kafka
@@ -118,6 +148,7 @@ services:
     environment:
       HADOOP_NAMENODE: namenode
       HIVE_METASTORE_DB_HOST: postgres
+      fs.defaultFS: hdfs://namenode:8020
     depends_on:
       - namenode
 
