--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
       - ./hadoop.env
+    ports:
+      - "9875:9875"
 
   resourcemanager:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.2.1-java8
@@ -61,7 +63,7 @@ services:
     image: bde2020/spark-master:3.3.0-hadoop3.3
     container_name: spark-master
     ports:
-      - "8080:8080"
+      - "8081:8080"  ### 8080:8080
       - "7077:7077"
     volumes:
       - ./app:/app
@@ -75,7 +77,7 @@ services:
     depends_on:
       - spark-master
     ports:
-      - "8081:8081"
+      - "8082:8081"  #- "8081:8081"
     environment:
       - "SPARK_MASTER=spark://spark-master:7077"
 
@@ -127,17 +129,44 @@ services:
       - FLASK_APP=app.py
     command: ["./wait-for-it.sh", "kafka:9092", "--", "python3", "-m", "flask", "run", "--host=0.0.0.0"]
 
+  # hive-server:
+  #   image: bde2020/hive:2.3.2-postgresql-metastore
+  #   env_file:
+  #     - ./hadoop-hive.env
+  #   container_name: hive-server
+  #   ports:
+  #     - "10000:10000"
+  #   environment:
+  #     HADOOP_NAMENODE: namenode
+  #     HIVE_METASTORE_DB_HOST: postgres
+  #     fs.defaultFS: hdfs://namenode:8020
+  #   depends_on:
+  #     - namenode
+  hive-metastore:
+    image: apache/hive:4.0.0
+    container_name: hive-metastore
+    ports:
+      - "9083:9083"
+    volumes:
+      - ./conf:/opt/hive/conf
+    environment:
+      - SERVICE_NAME=metastore
+    command: >
+      bash -c "hive --service metastore"
+ 
   hive-server:
-    image: bde2020/hive:2.3.2-postgresql-metastore
+    image: apache/hive:4.0.0
     container_name: hive-server
     ports:
       - "10000:10000"
+      - "10002:10002"
+    volumes:
+      - ./conf:/opt/hive/conf
     environment:
-      HADOOP_NAMENODE: namenode
-      HIVE_METASTORE_DB_HOST: postgres
-      fs.defaultFS: hdfs://namenode:8020
-    depends_on:
-      - namenode
+      - SERVICE_NAME=hiveserver2
+      - HIVE_SITE_CONF=/opt/hive/conf
+    command: >
+      bash -c "hive --service hiveserver2 --hiveconf hive.metastore.uris=thrift://hive-metastore:9083"
 
 volumes:
   hadoop_namenode:
